--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import logo from '../assets/astro.svg';
+import logo from '../assets/images/logos/logo.webp';
 interface Props {
     variant?: 'header' | 'footer' | 'dark';
 }
@@ -29,5 +29,5 @@ const getLogoClass = () => {
         // If there is link text, leave alt empty.
     }
     <Image src={logo} alt="" class="hidden" />
-    <span class="font-bold">Titan</span> Core
+    <span class="font-bold">JMF</span> Ortiz
 </a>
