--- a/src/components/sections/SplitPanel.astro
+++ b/src/components/sections/SplitPanel.astro
@@ -96,7 +96,7 @@ const textColor = getTextColor(background);
                 }
 
                 {
-                    buttons.length > 0 && (
+                    buttons && (
                         <div class="flex flex-wrap gap-4 mt-8" data-aos="fade-up">
                             {buttons.map((button) => (
                                 <Button
