--- a/src/pages/privacy-policy/index.astro
+++ b/src/pages/privacy-policy/index.astro
@@ -3,10 +3,10 @@ import Layout from '@layouts/Layout.astro';
 import InnerHero from '@components/sections/InnerHero.astro';
 
 const heroContent = {
-    title: "Privacy Policy",
-    description: "Privacy Policy for our website"
+    title: "Política de Privacidad",
+    description: "Política de Privacidad de JMF Ortiz",
 }
 ---
-<Layout title="Privacy Policy" description="Privacy Policy for our website">
+<Layout title="Política de Privacidad" description="Política de Privacidad de JMF Ortiz">
     <InnerHero content={heroContent} />
 </Layout>
