--- a/src/components/sections/ContactInfo.astro
+++ b/src/components/sections/ContactInfo.astro
@@ -37,17 +37,17 @@ const paddingClass = getPaddingClass({ padding, paddingTop, paddingBottom });
     <div class="site-container px-4">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <div>
-                <h2 class:list={[textColor]}>Contact Information</h2>
+                <h2 class:list={[textColor]}>Información de Contacto</h2>
                 <p class:list={[textColor]}>
-                    We're here to help you with your questions and concerns.
+                    Estamos aquí para ayudarte con tus preguntas y dudas.
                 </p>
                 <p class:list={[textColor]}>
-                    You can contact us via email or phone.
+                    Puedes contactarnos a través de correo electrónico o teléfono.
                 </p>
                 <div class:list={["flex flex-col gap-2 mt-4", textColor]}>
                     <div class:list={["flex items-center gap-2"]}><Mail aria-hidden="true" /> <a href={`mailto:${siteConfig.Socials.Email}`}>{siteConfig.Socials.Email}</a></div>
                     <div class:list={["flex items-center gap-2"]}><Phone aria-hidden="true" /> <a href={`tel:${siteConfig.Socials.Phone}`}>{siteConfig.Socials.Phone}</a></div>
-                    <div class:list={["flex items-center gap-2"]}><MapPin aria-hidden="true" /> <a href={`https://maps.google.com/?q=${siteConfig.Socials.Location}`}>{siteConfig.Socials.Location}</a></div>
+                    <div class:list={["flex items-center gap-2"]}><MapPin aria-hidden="true" /> <a href={`https://maps.google.com/?q=${siteConfig.Socials.Location}`} target="_blank">{siteConfig.Socials.Location}</a></div>
                 </div>
             </div>
             <div>
