--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -4,12 +4,12 @@ import InnerHero from "@components/sections/InnerHero.astro"
 import ContactInfo from "@components/sections/ContactInfo.astro"
 
 const heroContent = {
-    title: "Contact Us",
-    description: "Contact us for more information"
+    title: "Contactanos",
+    description: "Contáctanos para más información"
 }
 ---
 
-<Layout title="Contact Us" description="Contact us for more information">
+<Layout title="Contactanos" description="Contáctanos para más información">
     <InnerHero content={heroContent} />
-    <ContactInfo background="base" padding="base" />
+    <ContactInfo background="dark" padding="base" />
 </Layout>
