--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -67,7 +67,7 @@ const currentYear = new Date().getFullYear();
           Correo: info@jmfortiz.com
         </p>
         <p class="mt-4 text-white">
-          C/ Hilados, número 20, Esc Izq Bajo B, 28850 Torrejón de Ardoz.
+          C/ Hilados, número 20, Esc Izq Bajo B, 28850 Torrejón de Ardoz. Madrid.
         </p>
       </div>
 
