--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -20,7 +20,7 @@ const heroContent = {
 const firstSection = {
     eyebrow: "",
     headline: "Gestión de todos los aspectos de la comunidad",
-    description: "desde la gestión económica hasta el mantenimiento de las instalaciones. Todo esto con un enfoque en la transparencia y la seguridad.",
+    description: "Desde la gestión económica hasta el mantenimiento de las instalaciones. Todo esto con un enfoque en la transparencia y la seguridad.",
     image: {
         src: styleGuideImage,
         alt: "Featured image"
