--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,8 +73,8 @@ const fullCanonicalUrl = new URL(canonicalPath, siteConfig.siteUrl).toString();
 		<Header />
 		<slot />
 		<Footer footerCta={footerCta} />
-		<ThemeSwitcher />
-		
+		<!-- <ThemeSwitcher /> -->
+
 		<script>
 			import AOS from 'aos';
 			AOS.init({
