--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,6 @@
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import ThemeSwitcher from "../components/ThemeSwitcher.astro";
 import { SEO, siteConfig } from "../data/config";
 import 'aos/dist/aos.css';
 import { themeSetting } from "../data/config";
@@ -69,7 +68,7 @@ const fullCanonicalUrl = new URL(canonicalPath, siteConfig.siteUrl).toString();
 		<meta property="twitter:description" content={pageDescription} />
 		{pageImage && <meta property="twitter:image" content={new URL(pageImage, siteConfig.siteUrl).toString()} />}
 	</head>
-	<body data-theme={theme}>
+	<body data-theme={theme} class="bg-background-dark">
 		<Header />
 		<slot />
 		<Footer footerCta={footerCta} />
