--- a/src/pages/legal/[slug].astro
+++ b/src/pages/legal/[slug].astro
@@ -36,9 +36,9 @@ const heroContent = {
 <Layout title={seoTitle} description={seoDescription}>
     <InnerHero content={heroContent} />
 
-    <article class="site-container--small mx-auto px-8 prose pb-base">
+    <article class="site-container--small mx-auto px-8 prose pb-base text-white">
         <div class="mt-12 mb-8">
-            <p class="text-sm text-body-base/80">Ultima actualización: {formattedDate}</p>
+            <p class="text-sm text-white">Ultima actualización: {formattedDate}</p>
         </div>
 
         <Content />
