--- a/src/components/Chatia.astro
+++ b/src/components/Chatia.astro
@@ -12,7 +12,7 @@
         </svg>
       </div>
       <div>
-        <h2 class="text-lg font-semibold">Asistente JMF Ortiz</h2>
+        <h2 class="text-lg font-semibold">Administrador virtual JMF Ortiz</h2>
         <p class="text-sm text-white/80">En línea</p>
       </div>
     </div>
@@ -243,7 +243,7 @@
 
   // Mensaje inicial
   document.addEventListener('DOMContentLoaded', () => {
-    addMessage("Hola soy tu asistente virtual, ¿en qué puedo ayudarte hoy?", false);
+    addMessage("Hola soy tu Administrador virtual, ¿en qué puedo ayudarte?", false);
   });
 </script>
 
