--- a/src/pages/chat/index.astro
+++ b/src/pages/chat/index.astro
@@ -3,11 +3,11 @@ import Layout from '@layouts/Layout.astro';
 import InnerHero from '@components/sections/InnerHero.astro';
 import Chatia from '@components/Chatia.astro';
 
-const seoTitle = "Asistente virtual | JMF Ortiz";
-const seoDescription = "Asistente virtual de la administración de fincas en Torrejón de Ardoz con más de 40 años de experiencia. Presupuesto gratuito y sin compromiso.";
+const seoTitle = "Administrador virtual | JMF Ortiz";
+const seoDescription = "Administrador virtual de la administración de fincas en Torrejón de Ardoz con más de 40 años de experiencia. Presupuesto gratuito y sin compromiso.";
 
 const heroContent = {
-    title: "Asistente virtual",
+    title: "Administrador Virtual",
     description: "JMF Ortiz",
 }
 ---
