--- a/src/components/sections/InnerHero.astro
+++ b/src/components/sections/InnerHero.astro
@@ -17,7 +17,7 @@ const { content } = Astro.props;
 const opacity = content.overlayOpacity ?? 1;
 ---
 
-<section class="w-full border-b pt-22 pb-14 relative">
+<section class="w-full border-b pt-22 pb-14 h-44 relative">
     <div class="absolute inset-0 left-0 top-0 w-full h-full overflow-hidden">
             {content.backgroundImage && (
                 <Image
@@ -38,7 +38,7 @@ const opacity = content.overlayOpacity ?? 1;
 
     <div class="site-container mx-auto px-4 relative z-10">
         <div>
-            <h1 class="text-white" data-aos="fade-up">{content.title}</h1>
+            <h1 class="text-white text-xl font-bold pt-6" data-aos="fade-up" data-aos-delay="100">{content.title}</h1>
             {content.description && <p class="subtitle text-white" data-aos="fade-up" data-aos-delay="100">{content.description}</p>}
         </div>
     </div>
