--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -60,13 +60,13 @@ const currentYear = new Date().getFullYear();
       <div class="col-span-2">
         Adminitración de Fincas JMF Ortiz
         <p class="mt-4 text-white">
-          Telefono: 91 656 55 12
+          91 656 55 12
         </p>
         <p class="mt-4 text-white">
-          Correo: info@jmfortiz.com
+          comunicaciones@jmfortiz.com
         </p>
         <p class="mt-4 text-white">
-          C/ Hilados, número 20, Esc Izq Bajo B, 28850 Torrejón de Ardoz. Madrid.
+          C/ Hilados, número 20, Esc Izq Bajo B, 28850 Torrejón de Ardoz. Madrid
         </p>
       </div>
 
