--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const heroContent = {
             target: '_self'
         },
         {
-            text: 'Habla con nuestro asistente virtual',
+            text: 'Habla con nuestro Administrador virtual',
             link: '/chat',
             target: '_self'
         }
