--- a/src/components/Chatia.astro
+++ b/src/components/Chatia.astro
@@ -2,7 +2,7 @@
 // ChatIA.astro
 ---
 
-<div class="max-w-4xl mx-auto bg-background-dark rounded-lg shadow-lg overflow-hidden mt-10 mb-10 h-2/3">
+<div class="max-w-4xl mx-auto bg-background-dark rounded-xl shadow-lg overflow-hidden py-6 px-2 mt-10 mb-0 sm:h-2/3">
   <!-- Header del Chat -->
   <div class="bg-gradient-to-r from-blue-600 to-purple-600 text-white p-4">
     <div class="flex items-center space-x-3">
