--- a/src/components/forms/Contact.astro
+++ b/src/components/forms/Contact.astro
@@ -142,7 +142,7 @@ const formBackground = 'light';
         }
 
         try {
-            const response = await fetch('https://jmf-email.vercel.app/', {
+            const response = await fetch('https://jmf-email.vercel.app/api/index.js', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
