--- a/src/pages/chat/index.astro
+++ b/src/pages/chat/index.astro
@@ -10,13 +10,12 @@ const heroContent = {
     title: "Administrador Virtual",
     description: "JMF Ortiz",
 }
-export const prerender = false;
 ---
 
 <Layout title={seoTitle} description={seoDescription}>
      <InnerHero content={heroContent}  />
     <div    id="n8n-chat"
-            class="max-w-4xl mx-auto bg-background-dark rounded-xl shadow-lg overflow-hidden py-6 px-2 mt-10 mb-0 sm:h-2/3">
+            class="flex max-w-4xl h-[600px] mx-auto bg-background-dark rounded-xl shadow-lg overflow-hidden py-6 px-2 mt-10 mb-0 sm:h-2/3">
     </div>
 </Layout>
 
