--- a/src/pages/chat/index.astro
+++ b/src/pages/chat/index.astro
@@ -34,7 +34,7 @@ const heroContent = {
 
     document.addEventListener('DOMContentLoaded', function() {
         createChat({
-            webhookUrl: 'https://primary-production-b2d99.up.railway.app/webhook/b50c3709-d2a6-4e0f-8bb9-72ba69e56438/chat',
+            webhookUrl: 'https://jmfortiz.jasodev.es/webhook/b50c3709-d2a6-4e0f-8bb9-72ba69e56438/chat',
             target: '#n8n-chat',
             initialMessages: ['Administrador virtual JMF Ortiz a tu servicio.'],
             mode: 'fullscreen',
