--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import { headerMenu } from '@data/menu';
 import Logo from '@components/Logo.astro';
-import { Menu, X, ChevronDown } from 'lucide-astro';
+import { Menu, X } from 'lucide-astro';
 import Button from '@components/ui/Button.astro';
 
 const ctaButton = {
@@ -18,6 +18,7 @@ const isCurrentPage = (link: string) => {
         return currentPath === '/';
     }
     return currentPath.startsWith(link);
+
 };
 ---
 
@@ -53,7 +54,21 @@ const isCurrentPage = (link: string) => {
                 </ul>
 
                 <Button href={ctaButton.link} variant="primary">{ctaButton.name}</Button>
-
+                <div id="dashboardBtn" class="hidden">
+                    <button class="bg-green-200 text-sm text-accent px-4 py-1 border-2 rounded-xl hover:opacity-90 focus-visible:ring-accent hover:ring-2 hover:ring-accent hover:ring-offset-2">
+                        Actas
+                    </button>
+                </div>
+                <div id="loginBtn" class="hidden">
+                    <button class="text-accent text-sm px-4 py-1 border-2 rounded-xl hover:opacity-90 focus-visible:ring-accent hover:ring-2 hover:ring-accent hover:ring-offset-2">
+                        Login
+                    </button>
+                </div>
+                <div id="logoutBtn" class="hidden">
+                    <button class="text-accent text-sm px-4 py-1 border-2 rounded-xl hover:opacity-90 focus-visible:ring-accent hover:ring-2 hover:ring-accent hover:ring-offset-2">
+                        Logout
+                    </button>
+                </div>
                 {/* Mobile Menu Button */}
                 <button
                     class="mobile-menu-button relative z-30 p-2 border-none cursor-pointer bg-transparent lg:hidden"
@@ -110,6 +125,39 @@ const isCurrentPage = (link: string) => {
 </header>
 
 <script>
+    const userToken = localStorage.getItem('rpg_auth_token');
+    const loginBtn = document.getElementById('loginBtn') as HTMLElement;
+    const logoutBtn = document.getElementById('logoutBtn') as HTMLElement;
+    const dashboardBtn = document.getElementById('dashboardBtn') as HTMLElement;
+    if (userToken) {
+        loginBtn.classList.add('hidden');
+        logoutBtn.classList.remove('hidden');
+        dashboardBtn.classList.remove('hidden');
+    } else {
+        loginBtn.classList.remove('hidden');
+        logoutBtn.classList.add('hidden');
+        dashboardBtn.classList.add('hidden');
+
+    }
+
+    loginBtn.addEventListener('click', () => {
+        if(window.location.pathname === '/login') return
+        window.location.href = '/login';
+    });
+
+    logoutBtn.addEventListener('click', () => {
+        logoutBtn.classList.add('hidden');
+        dashboardBtn.classList.add('hidden');
+        localStorage.clear();
+        sessionStorage.removeItem('rpg_auth_token');
+        window.location.href = '/login';
+    });
+
+    dashboardBtn.addEventListener('click', () => {
+        if(window.location.pathname === '/dashboard') return
+        window.location.href = '/dashboard';
+    });
+
     // Desktop Menu
     const desktopMenuItems = document.querySelectorAll('.group');
 
@@ -265,4 +313,5 @@ const isCurrentPage = (link: string) => {
             closeIcon?.classList.add('hidden');
         }
     });
+
 </script>
