--- a/src/components/Chatia.astro
+++ b/src/components/Chatia.astro
@@ -59,8 +59,9 @@
     </div>
   </div> -->
 <!-- </div> -->
-<div    id="n8n-chat"
-        class="max-w-4xl mx-auto bg-background-dark rounded-xl shadow-lg overflow-hidden py-6 px-2 mt-10 mb-0 sm:h-2/3">
+<div
+    id="n8n-chat"
+    class="max-w-4xl mx-auto bg-background-dark rounded-xl shadow-lg overflow-hidden py-6 px-2 mt-10 mb-0 sm:h-2/3">
 </div>
 
 <script>
@@ -74,6 +75,7 @@
 	],
     mode: 'fullscreen',
     i18n: {
+        //@ts-ignore
 		en: {
 			title: 'Administrator virtual JMF Ortiz',
 			subtitle: "",
