--- a/src/components/sections/ContactInfo.astro
+++ b/src/components/sections/ContactInfo.astro
@@ -50,7 +50,7 @@ const paddingClass = getPaddingClass({ padding, paddingTop, paddingBottom });
                     <div class:list={["flex items-center gap-2"]}><MapPin aria-hidden="true" /> <a href={`https://maps.google.com/?q=${siteConfig.Socials.Location}`} target="_blank">{siteConfig.Socials.Location}</a></div>
                 </div>
             </div>
-            <div>
+            <div class="h-dvh">
                 <Contact />
             </div>
         </div>
