--- a/src/components/Chatia.astro
+++ b/src/components/Chatia.astro
@@ -69,7 +69,7 @@
     import { createChat } from '@n8n/chat';
 
     createChat({
-        webhookUrl: 'https://primary-production-b2d99.up.railway.app/webhook/b50c3709-d2a6-4e0f-8bb9-72ba69e56438/chat',
+        webhookUrl: 'https://jmfortiz.jasodev.es/webhook/b50c3709-d2a6-4e0f-8bb9-72ba69e56438/chat',
         initialMessages: [
 		'Administrador virtual JMF Ortiz a tu servicio.'
 	],
@@ -77,8 +77,8 @@
     i18n: {
         //@ts-ignore
 		en: {
-			title: 'Administrator virtual JMF Ortiz',
-			subtitle: "",
+			title: '',
+			subtitle: "Administrator virtual JMF Ortiz",
 			footer: '',
 			getStarted: 'New Conversation',
 			inputPlaceholder: 'Escribe tu consulta..',
