--- a/src/components/forms/Contact.astro
+++ b/src/components/forms/Contact.astro
@@ -105,7 +105,7 @@ const formBackground = 'light';
     import { createChat } from '@n8n/chat';
 
     createChat({
-        webhookUrl: 'https://primary-production-b2d99.up.railway.app/webhook/b50c3709-d2a6-4e0f-8bb9-72ba69e56438/chat',
+        webhookUrl: 'https://jmfortiz.jasodev.es/webhook/b50c3709-d2a6-4e0f-8bb9-72ba69e56438/chat',
         initialMessages: [
 		'En que te puedo ayudar?.'
 	],
