--- a/src/pages/chat/index.astro
+++ b/src/pages/chat/index.astro
@@ -39,9 +39,10 @@ const heroContent = {
             initialMessages: ['Administrador virtual JMF Ortiz a tu servicio.'],
             mode: 'fullscreen',
             i18n: {
+                //@ts-ignore
                 en: {
-                    title: 'Administrador virtual JMF Ortiz',
-                    subtitle: "",
+                    title: '',
+                    subtitle: "Administrador virtual JMF Ortiz",
                     footer: '',
                     getStarted: 'New Conversation',
                     inputPlaceholder: 'Escribe tu consulta..',
